# TD1-2-RUST-

./: README.md
rust-td1-2-Nathan-main/: Cargo.toml  dashboard.html
rust-td1-2-Nathan-main/src/: main.rs  websocket_server.rs
