[package]
name = "rust-td"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "websocket_server"
path = "src/websocket_server.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

tokio-tungstenite = "0.20"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
hyper = "1.0"